no.6/hatten1/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI

   3  expr : LET var lvar2 IN expr
   4       | IF expr THEN expr ELSE expr
   5       | FUN var lvar
   6       | arith_expr EQ arith_expr
   7       | arith_expr LT arith_expr
   8       | arith_expr

   9  lvar : var lvar
  10       | ARROW expr

  11  lvar2 : var lvar2
  12        | EQ expr

  13  arith_expr : arith_expr PLUS factor_expr
  14             | arith_expr MINUS factor_expr
  15             | factor_expr

  16  factor_expr : factor_expr TIMES app_expr
  17              | factor_expr DIV app_expr
  18              | app_expr

  19  app_expr : app_expr atomic_expr
  20           | atomic_expr

  21  atomic_expr : INT
  22              | BOOL
  23              | ID
  24              | LPAR expr RPAR

  25  var : ID

  26  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	toplevel  goto 10
	expr  goto 11
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (21)

	.  reduce 21


state 4
	atomic_expr : BOOL .  (22)

	.  reduce 22


state 5
	atomic_expr : ID .  (23)

	.  reduce 23


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	expr : LET . var lvar2 IN expr  (3)

	ID  shift 16
	.  error

	var  goto 17


state 7
	expr : IF . expr THEN expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 19
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 8
	atomic_expr : LPAR . expr RPAR  (24)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 20
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 9
	expr : FUN . var lvar  (5)

	ID  shift 16
	.  error

	var  goto 21


state 10
	%entry% : '\001' toplevel .  (26)

	.  reduce 26


state 11
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 22
	.  error


state 12
	expr : arith_expr . EQ arith_expr  (6)
	expr : arith_expr . LT arith_expr  (7)
	expr : arith_expr .  (8)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 23
	MINUS  shift 24
	EQ  shift 25
	LT  shift 26
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	SEMISEMI  reduce 8


state 13
	arith_expr : factor_expr .  (15)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15


state 14
	factor_expr : app_expr .  (18)
	app_expr : app_expr . atomic_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 18
	PLUS  reduce 18
	TIMES  reduce 18
	MINUS  reduce 18
	DIV  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	SEMISEMI  reduce 18

	atomic_expr  goto 29


state 15
	app_expr : atomic_expr .  (20)

	.  reduce 20


state 16
	var : ID .  (25)

	.  reduce 25


state 17
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . lvar2 IN expr  (3)

	ID  shift 16
	EQ  shift 30
	.  error

	var  goto 31
	lvar2  goto 32


state 18
	expr : LET . var lvar2 IN expr  (3)

	ID  shift 16
	.  error

	var  goto 33


state 19
	expr : IF expr . THEN expr ELSE expr  (4)

	THEN  shift 34
	.  error


state 20
	atomic_expr : LPAR expr . RPAR  (24)

	RPAR  shift 35
	.  error


state 21
	expr : FUN var . lvar  (5)

	ID  shift 16
	ARROW  shift 36
	.  error

	var  goto 37
	lvar  goto 38


state 22
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 23
	arith_expr : arith_expr PLUS . factor_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 39
	app_expr  goto 14
	atomic_expr  goto 15


state 24
	arith_expr : arith_expr MINUS . factor_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 40
	app_expr  goto 14
	atomic_expr  goto 15


state 25
	expr : arith_expr EQ . arith_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 41
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 26
	expr : arith_expr LT . arith_expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 42
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 27
	factor_expr : factor_expr TIMES . app_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 43
	atomic_expr  goto 15


state 28
	factor_expr : factor_expr DIV . app_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 44
	atomic_expr  goto 15


state 29
	app_expr : app_expr atomic_expr .  (19)

	.  reduce 19


state 30
	toplevel : LET var EQ . expr SEMISEMI  (2)
	lvar2 : EQ . expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 45
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 31
	lvar2 : var . lvar2  (11)

	ID  shift 16
	EQ  shift 46
	.  error

	var  goto 31
	lvar2  goto 47


state 32
	expr : LET var lvar2 . IN expr  (3)

	IN  shift 48
	.  error


state 33
	expr : LET var . lvar2 IN expr  (3)

	ID  shift 16
	EQ  shift 46
	.  error

	var  goto 31
	lvar2  goto 32


state 34
	expr : IF expr THEN . expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 49
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 35
	atomic_expr : LPAR expr RPAR .  (24)

	.  reduce 24


state 36
	lvar : ARROW . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 50
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 37
	lvar : var . lvar  (9)

	ID  shift 16
	ARROW  shift 36
	.  error

	var  goto 37
	lvar  goto 51


state 38
	expr : FUN var lvar .  (5)

	.  reduce 5


state 39
	arith_expr : arith_expr PLUS factor_expr .  (13)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13


state 40
	arith_expr : arith_expr MINUS factor_expr .  (14)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14


state 41
	expr : arith_expr EQ arith_expr .  (6)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 23
	MINUS  shift 24
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	SEMISEMI  reduce 6


state 42
	expr : arith_expr LT arith_expr .  (7)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 23
	MINUS  shift 24
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	SEMISEMI  reduce 7


state 43
	factor_expr : factor_expr TIMES app_expr .  (16)
	app_expr : app_expr . atomic_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 16
	PLUS  reduce 16
	TIMES  reduce 16
	MINUS  reduce 16
	DIV  reduce 16
	EQ  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16

	atomic_expr  goto 29


state 44
	factor_expr : factor_expr DIV app_expr .  (17)
	app_expr : app_expr . atomic_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 17
	PLUS  reduce 17
	TIMES  reduce 17
	MINUS  reduce 17
	DIV  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17

	atomic_expr  goto 29


state 45
	toplevel : LET var EQ expr . SEMISEMI  (2)
	lvar2 : EQ expr .  (12)

	SEMISEMI  shift 52
	IN  reduce 12


state 46
	lvar2 : EQ . expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 53
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 47
	lvar2 : var lvar2 .  (11)

	.  reduce 11


state 48
	expr : LET var lvar2 IN . expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 54
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 49
	expr : IF expr THEN expr . ELSE expr  (4)

	ELSE  shift 55
	.  error


state 50
	lvar : ARROW expr .  (10)

	.  reduce 10


state 51
	lvar : var lvar .  (9)

	.  reduce 9


state 52
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 53
	lvar2 : EQ expr .  (12)

	.  reduce 12


state 54
	expr : LET var lvar2 IN expr .  (3)

	.  reduce 3


state 55
	expr : IF expr THEN expr ELSE . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 56
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 56
	expr : IF expr THEN expr ELSE expr .  (4)

	.  reduce 4


22 terminals, 11 nonterminals
27 grammar rules, 57 states
